Bug 1557360 - Crash Signature textbox is too narrow

--- a/extensions/BMO/web/styles/bug_modal.css
+++ b/extensions/BMO/web/styles/bug_modal.css
@@ -5,6 +5,11 @@
  * This Source Code Form is "Incompatible With Secondary Licenses", as
  * defined by the Mozilla Public License, v. 2.0. */
 
+#cf_crash_signature {
+  width: 100%;
+  font-size: var(--font-size-medium);
+}
+
 #legal_disclaimer {
   margin: 16px 0;
   border: 1px solid var(--warning-message-border-color);
